--- a/index.html
+++ b/index.html
@@ -317,14 +317,24 @@
         }
 
         .bottom {
-            height: 40%;
-            width: 100%;
+            height: 30%;   
+            width: 99%;        
             z-index: 1;
-            bottom: -50px;
-            overflow: auto;
-            padding-bottom: -40px;
+            overflow-y: scroll;
+            
+            left: 10px;
+            right: 20px;
+            bottom: 10px;
             position: fixed;
-        }
+        }   
+
+        table.scrolldown tbody {                                             
+              /* Set vertical scroll */ 
+              overflow-y: scroll; 
+                
+              /* Hide the horizontal scroll */ 
+              overflow-x: hidden;  
+          } 
 
         .centered {
             position: absolute;
@@ -359,6 +369,13 @@
     </div>
 
     <div id="optimalpledge" class="bottom">
+bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>
+    bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>
+        bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>
+
+            bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>
+
+                bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>bottom<BR>
 
     </div>
 
