--- a/cu_essentials.html
+++ b/cu_essentials.html
@@ -91,7 +91,7 @@
                                 colCount++;
                             }
                         }
-                        if(results.data[0][j] == 'Warfield Village'){
+                        if(results.data[0][j] == 'Inn to the Pit'){
                             lastBigset=colCount
                         }
                     }
@@ -665,13 +665,13 @@
 
         .left {
             left: 0;
-            height: 100%;
+            height: 95%;
             width: 30%
         }
 
         .right {
             right: 0;
-            height: 100%;
+            height: 95%;
             width: 70%
         }
 
