--- a/cu.html
+++ b/cu.html
@@ -669,7 +669,7 @@
     <p1>
         <B>Enter CSV export of Randy's Spreadsheet: <input type="file" id="csv-file" name="files" /> OR <a
                 href="javascript:loadCsv('https://dfperiod3.github.io/cuLowtownPledgePlanner.csv', true);">Use
-                Version downloaded Feb. 16</a></B>
+                Version downloaded Feb. 16@11:46PM EST</a></B>
                 
     </p1>
 
