--- a/cu_essentials.html
+++ b/cu_essentials.html
@@ -75,7 +75,10 @@
                             console.log("Got item "+results.data[0][j]+", SKU="+results.data[1][j]);
                             var packName = results.data[0][j];
                             var sku = results.data[1][j]
-
+                            
+                            if(results.data[0][j] == 'Inn to the Pit'){
+                                results.data[3][j] = 1494; //inject unpainted price
+                            }
                             if(results.data[2][j] == null || results.data[3][j] == null){
                                 console.log("Skipping pack because it is missing the painted pack price, unpainted pack price, or both")
                             }else if(results.data[2][j] < 0.01 || results.data[3][j] < 0.01){
