Added fix for renamed market square.

--- a/cu.html
+++ b/cu.html
@@ -157,7 +157,7 @@
                         alert("Unexpected file format -- Painted Set Price was not found in the expected row");
                         return
                     }
-                    districts = new Set(['Ambush Alley', 'Downtown Dockside', 'Frontier Outpost',	"Lumberbaron's Lodge",'District - Market Square', 'Warfield Village', 'Inn to the Pit'])
+                    districts = new Set(['Ambush Alley', 'Downtown Dockside', 'Frontier Outpost',	"Lumberbaron's Lodge",'Market Square', 'Warfield Village', 'Inn to the Pit'])
                     landmarks = new Set(['City Barracks', "Harbormaster's Hut",	'Humble Homesteads', 'Midtown Merchants', 'Speakeasy Murderbar', "Thieves' Guild", 'Wharf Warehouse', "Wizard's Townhouse",	'Ye Olde Time Inn'])
 
                     districtMap=[]
