--- a/cu_essentials.html
+++ b/cu_essentials.html
@@ -724,7 +724,8 @@
     <p1>
         <B>Enter CSV export of Randy's Spreadsheet: <input type="file" id="csv-file" name="files" /> OR <a
                 href="javascript:loadCsv('https://dfperiod3.github.io/cuLowtownPledgePlanner.csv', true);">Use
-                Version downloaded Feb. 20@5PM EST</a></B> (optimizer updated Feb. 20 @5:15PM EDT)
+                Version downloaded Feb. 26@11:45PM EST</a></B> (optimizer code last updated Feb. 20 @5:15PM EDT)
+            <BR>Discounts not supported in this version. For discount support, see full version <a href="cu.html">here</a>
                 
     </p1>
 
