--- a/cu_essentials.html
+++ b/cu_essentials.html
@@ -76,9 +76,9 @@
                             var packName = results.data[0][j];
                             var sku = results.data[1][j]
                             
-                            if(results.data[0][j] == 'Inn to the Pit'){
-                                results.data[3][j] = 1494; //inject unpainted price
-                            }
+                            // if(results.data[0][j] == 'Inn to the Pit'){
+                            //     results.data[3][j] = 1494; //inject unpainted price
+                            // }
                             if(results.data[2][j] == null || results.data[3][j] == null){
                                 console.log("Skipping pack because it is missing the painted pack price, unpainted pack price, or both")
                             }else if(results.data[2][j] < 0.01 || results.data[3][j] < 0.01){
@@ -96,7 +96,7 @@
                                 colCount++;
                             }
                         }
-                        if(results.data[0][j] == 'Inn to the Pit'){
+                        if(results.data[0][j] == 'Elven Trading Post'){
                             lastBigset=colCount
                         }
                     }
@@ -724,7 +724,7 @@
     <p1>
         <B>Enter CSV export of Randy's Spreadsheet: <input type="file" id="csv-file" name="files" /> OR <a
                 href="javascript:loadCsv('https://dfperiod3.github.io/cuLowtownPledgePlanner.csv', true);">Use
-                Version downloaded Feb. 26@11:45PM EST</a></B> (optimizer code last updated Feb. 20 @5:15PM EDT)
+                Version downloaded Feb. 26@11:45PM EST</a></B> (optimizer code last updated Feb. 26 @11:53PM EDT)
             <BR>Discounts not supported in this version. For discount support, see full version <a href="cu.html">here</a>
                 
     </p1>
