Updated to latest spreadsheet.

--- a/cu.html
+++ b/cu.html
@@ -157,7 +157,7 @@
                         alert("Unexpected file format -- Painted Set Price was not found in the expected row");
                         return
                     }
-                    districts = new Set(['Ambush Alley', 'Downtown Dockside', 'Frontier Outpost',	"Lumberbaron's Lodge",'Market Square', 'Warfield Village', 'Inn to the Pit', 'Elven Trading Post'])
+                    districts = new Set(['Ambush Alley', 'Downtown Dockside', 'Frontier Outpost',	"Lumberbaron's Lodge",'Market Square', 'Warfield Village', 'Inn to the Pit', 'Elven Trading Post', 'Compl. A: Building Blocks',	'Compl. B: Dressing & Building Systems', 'Compl. D:  All Modular Roofs'])
                     landmarks = new Set(['City Barracks', "Harbormaster's Hut",	'Humble Homesteads', 'Midtown Merchants', 'Speakeasy Murderbar', "Thieves' Guild", 'Wharf Warehouse', "Wizard's Townhouse",	'Ye Olde Time Inn'])
 
                     districtMap=[]
@@ -840,7 +840,7 @@
         Identifies the minimum cost combination of packs containing at least the items indicated on the left. <A href="https://github.com/dfperiod3/dfperiod3.github.io#readme">Documentation</A> <BR>
         <B>Enter CSV export of Randy's Spreadsheet: <input type="file" id="csv-file" name="files" /> OR <a
                 href="javascript:loadCsv('https://dfperiod3.github.io/cuLowtownPledgePlanner.csv', true, false);">Use
-                Version downloaded Feb. 26@11:45PM EST</a></B> (optimizer code last updated Feb. 27 @12:15AM EST) <input id="supportDiscounts" type="checkbox" onClick="javascript:resetFrames()">Support Discounts[<a href="javascript:showDiscountsMessage()">?</a>] <HR>
+                Version downloaded Feb. 28@1:33AM EST</a></B> (optimizer code last updated Feb. 28 @1:33AM EST) <input id="supportDiscounts" type="checkbox" onClick="javascript:resetFrames()">Support Discounts[<a href="javascript:showDiscountsMessage()">?</a>] <HR>
                 
     </p1>
 
