--- a/cu_essentials.html
+++ b/cu_essentials.html
@@ -96,7 +96,7 @@
                                 colCount++;
                             }
                         }
-                        if(results.data[0][j] == 'Elven Trading Post'){
+                        if(results.data[0][j] == 'Compl. D:  All Modular Roofs'){
                             lastBigset=colCount
                         }
                     }
@@ -724,7 +724,7 @@
     <p1>
         <B>Enter CSV export of Randy's Spreadsheet: <input type="file" id="csv-file" name="files" /> OR <a
                 href="javascript:loadCsv('https://dfperiod3.github.io/cuLowtownPledgePlanner.csv', true);">Use
-                Version downloaded Feb. 26@11:45PM EST</a></B> (optimizer code last updated Feb. 26 @11:53PM EDT)
+                Version downloaded Feb. 28@1:33AM EST</a></B> (optimizer code last updated Feb. 28 @1:33AM EST)
             <BR>Discounts not supported in this version. For discount support, see full version <a href="cu.html">here</a>
                 
     </p1>
