Fixed missing fieldstone spacer.

--- a/cu.html
+++ b/cu.html
@@ -329,7 +329,7 @@
 
                     var beginRowIndexInclusive = -1; //init row index of first item.
                     for (var j = 1; j < results.data.length; ++j) { //skip over rows until we reach the first item, and record its row index
-                        if (results.data[j][2] == '4-PA-006') {
+                        if (results.data[j][2] == '4-GH-009') {
                             beginRowIndexInclusive = j;
                             //console.log('Found row at '+beginRowIndexInclusive);
                         }
