--- a/cu.html
+++ b/cu.html
@@ -828,7 +828,7 @@
                             omissionString = omissionString.substring(0, omissionString.length - 1);
                         }
                         itemsLost = omissionString;
-                        table.innerHTML += "<tr><td>" + key + "</td><td><a href=''>-</a>"+solution[key]+"<a href=''>+</a>" + "</td><td>$" + (solution[key] * packPrices[matrixHeaderMap[key]]) + "</td><td>" + fractionLost + "</td><td>" + itemsLost + "</td></tr>"
+                        table.innerHTML += "<tr><td>" + key + "</td><td>"+solution[key]+ "</td><td>$" + (solution[key] * packPrices[matrixHeaderMap[key]]) + "</td><td>" + fractionLost + "</td><td>" + itemsLost + "</td></tr>"
                     }
                 }
                 bottom.appendChild(table);
@@ -978,7 +978,7 @@
         Identifies the minimum cost combination of packs containing at least the items indicated on the left. <A href="https://github.com/dfperiod3/dfperiod3.github.io#readme">Documentation</A> <BR>
         <B>Enter CSV export of Randy's Spreadsheet: <input type="file" id="csv-file" name="files" /> OR <a
                 href="javascript:loadCsv('https://dfperiod3.github.io/cuLowtownPledgePlanner.csv', true, false);">Use
-                Version downloaded Feb. 28@1:33AM EST</a></B> (optimizer code last updated Mar. 9 @11:52PM EST) <input id="supportDiscounts" type="checkbox" onClick="javascript:resetFrames()">Support Discounts[<a href="javascript:showDiscountsMessage()">?</a>] <HR>
+                Version downloaded Feb. 28@1:33AM EST</a></B> (optimizer code last updated Mar. 9 @11:56PM EST) <input id="supportDiscounts" type="checkbox" onClick="javascript:resetFrames()">Support Discounts[<a href="javascript:showDiscountsMessage()">?</a>] <HR>
                 
     </p1>
 
